# EPIC

./: .gitignore  package-lock.json  package.json
src/: find_your_organization.html  header-dialog.html  index-new-too-much.html  index-o.html  index-sel.html  index.html  login.html  startup_router.html
src-tauri/: .env  .env.dev  .env.prod  .env.qa  .env.uat  Cargo.toml  index.html  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: api_client.rs  auth_commands.rs  bypass_data.rs  commands.rs  encryption_utils.rs  env_config.rs  lib.rs  logger.rs  main.py  main.rs  main_utils.rs  timestamp.rs  user_activity_gui.py  utils.rs
src-tauri/src/db/: core.rs  mod.rs  queries.rs
src-tauri/src/streamer/core/: controller.rs  engine.rs  mod.rs  scheduler.rs  state.rs
src-tauri/src/streaming/: capture.rs  mod.rs  pipeline.rs  recorder.rs  streamer.rs
src-tauri/src/tracker/: config.rs  events.rs  mod.rs  screenshot.rs  worker.rs
src-tauri/src/tracker/aggregator/: minute.rs  mod.rs  summary.rs
src-tauri/src/tracker/app_tracker/: app_track.rs  mod.rs  window.rs  windows.rs
src-tauri/src/tracker/audio/: mic_detector.rs  mod.rs
src-tauri/src/tracker/idle/: detector.rs  fallback.rs  linux.rs  macos.rs  mod-o.rs  mod.rs  windows.rs
src-tauri/src/tracker/input/: linux.rs  macos.rs  mod.rs  monitor.rs  windows.rs  windows_lock.rs
src-tauri/src/tracker/storage/: mod.rs  persister.rs  writer.rs
src/components/: header.html  navbar.html
src/css/: auth-header-override.css  auth.css  base.css  epic.css  find_org.css  header.css  login.css  popover.css  style.css  tokens.css
src/js/: app.js  epic----.js  epic-.js  epic-o.js  epic-recent.js  epic.js  header.js  index.js  popover.js  window-controls.js  window-resize.js
src/pages/: app_url.html  break.html  call.html  productivity.html  settings.html
